--- a/ComparaYa/Views/ProductsView.xaml
+++ b/ComparaYa/Views/ProductsView.xaml
@@ -4,7 +4,7 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:ComparaYa"
-    BackgroundColor="#f4f5f8"
+    BackgroundColor="#EEEEEE"
     NavigationPage.HasNavigationBar="False">
 
     <ContentPage.IconImageSource>
@@ -13,28 +13,32 @@
 
     <Grid Margin="15">
         <Grid.RowDefinitions>
-            <RowDefinition Height="60" />
             <RowDefinition Height="80" />
             <RowDefinition Height="80" />
+            <RowDefinition Height="50" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
+
+
         <FlexLayout
             Grid.Row="0"
+            Margin="7"
             AlignItems="Center"
-            JustifyContent="Start">
-            <Image
-                Aspect="AspectFill"
-                HeightRequest="60"
-                Source="xd.png"
-                WidthRequest="60" />
+            JustifyContent="SpaceBetween">
             <Label
-                Margin="15,0,0,0"
-                FontAttributes="Bold"
                 FontFamily="PPI"
-                FontSize="30"
-                Text="ComparaYa!"
-                TextColor="#020202" />
+                FontSize="32"
+                Text="Explora productos"
+                TextColor="Black" />
+
+
+            <Image
+                x:Name="filters"
+                Aspect="AspectFit"
+                HeightRequest="35"
+                Source="filters.png"
+                WidthRequest="60" />
         </FlexLayout>
 
         <CollectionView
@@ -44,21 +48,21 @@
             <CollectionView.ItemsLayout>
                 <LinearItemsLayout Orientation="Horizontal" />
             </CollectionView.ItemsLayout>
-
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <FlexLayout
-                        Margin="4"
+                        Margin="5"
                         AlignItems="Center"
                         BackgroundColor="Transparent"
                         JustifyContent="SpaceEvenly">
+
                         <Button
                             BackgroundColor="White"
                             BorderColor="#e7e7e7"
                             BorderWidth="2"
                             Clicked="Button_Clicked"
-                            CornerRadius="12"
-                            HeightRequest="45"
+                            CornerRadius="13"
+                            HeightRequest="42"
                             Text="{Binding nombre}"
                             TextColor="#020202" />
                     </FlexLayout>
@@ -71,39 +75,30 @@
             Direction="Column"
             JustifyContent="Center">
             <SearchBar
+                Margin="3,0,3,10"
                 CancelButtonColor="#757575"
                 HeightRequest="40"
                 HorizontalOptions="FillAndExpand"
-                Placeholder="Search..."
+                Placeholder="Ej: Arroz"
                 PlaceholderColor="#9E9E9E"
+                TextChanged="SearchBar_TextChanged"
                 TextColor="Black" />
-
         </FlexLayout>
-
-
 
         <CollectionView
             x:Name="cvPro"
             Grid.Row="3"
             BackgroundColor="Transparent"
-            ItemsSource="{x:Static local:App.ProductosCollection}">
+            ItemsSource="{x:Static local:App.ProductosCollection}"
+            SelectionChanged="cvPro_SelectionChanged"
+            SelectionMode="Single">
             <CollectionView.ItemsLayout>
                 <GridItemsLayout
                     HorizontalItemSpacing="20"
                     Orientation="Vertical"
                     Span="2"
                     VerticalItemSpacing="20" />
-
             </CollectionView.ItemsLayout>
-            <CollectionView.Header>
-                <FlexLayout Grid.Row="2">
-                    <Label
-                        x:Name="count"
-                        FontSize="15"
-                        TextColor="Black" />
-                </FlexLayout>
-            </CollectionView.Header>
-
             <CollectionView.Footer>
                 <ActivityIndicator
                     x:Name="loadMoreActivityIndicator"
@@ -112,33 +107,33 @@
                     VerticalOptions="Center"
                     Color="Blue" />
             </CollectionView.Footer>
-
-
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Frame
                         Margin="10"
                         Padding="15"
                         BackgroundColor="White"
-                        CornerRadius="9"
-                        HasShadow="False"
-                        HeightRequest="300">
-
-                        <StackLayout>
+                        CornerRadius="9">
+                        <StackLayout VerticalOptions="CenterAndExpand">
+                            <!--  Agregado VerticalOptions="FillAndExpand"  -->
                             <Image
                                 Aspect="AspectFit"
-                                HeightRequest="200"
+                                HeightRequest="140"
                                 Source="{Binding imagen_url}" />
                             <Label
-                                FontAttributes="Bold"
-                                FontSize="16"
+                                FontFamily="PPI"
+                                FontSize="15"
+                                HorizontalTextAlignment="Center"
                                 Text="{Binding nombre}"
                                 TextColor="#4A4A4A" />
                             <Label
                                 x:Name="priced1"
                                 FontSize="14"
-                                Text="{Binding precio_d1}"
-                                TextColor="#77C65E">
+                                HorizontalOptions="Center"
+                                HorizontalTextAlignment="Center">
+                                <Label.Text>
+                                    <Binding Path="precio_d1" StringFormat="Precio D1: {0}" />
+                                </Label.Text>
                                 <Label.Triggers>
                                     <DataTrigger
                                         Binding="{Binding precio_d1}"
@@ -148,27 +143,15 @@
                                     </DataTrigger>
                                 </Label.Triggers>
                             </Label>
-
-                            <Label
-                                x:Name="priceolim"
-                                FontSize="14"
-                                Text="{Binding precio_olim}"
-                                TextColor="#77C65E">
-                                <Label.Triggers>
-                                    <DataTrigger
-                                        Binding="{Binding precio_olim}"
-                                        TargetType="Label"
-                                        Value="0">
-                                        <Setter Property="IsVisible" Value="False" />
-                                    </DataTrigger>
-                                </Label.Triggers>
-                            </Label>
-
+                            <!--  ... (otros elementos) ...  -->
                             <Label
                                 x:Name="priceexito"
                                 FontSize="14"
-                                Text="{Binding precio_exito}"
-                                TextColor="#77C65E">
+                                HorizontalOptions="CenterAndExpand"
+                                VerticalOptions="End">
+                                <Label.Text>
+                                    <Binding Path="precio_exito" StringFormat="Precio Exito: {0}" />
+                                </Label.Text>
                                 <Label.Triggers>
                                     <DataTrigger
                                         Binding="{Binding precio_exito}"
@@ -179,11 +162,13 @@
                                 </Label.Triggers>
                             </Label>
 
+
+
                         </StackLayout>
                     </Frame>
+
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
-
     </Grid>
 </ContentPage>
